--- a/src/app/people/people.component.html
+++ b/src/app/people/people.component.html
@@ -1,22 +1,71 @@
 <h1>
-  people works!
+  people works! # is {{people.count}}
 </h1>
+<table>
+  <thead>
+    <tr>
+      <td>Name</td>
+      <td>Height</td>
+      <td>Mass</td>
+      <td>Hair Color</td>
+      <td>Skin color</td>
+      <td>Eye Color</td>
+      <td>Birth Year</td>
+      <td>Gender</td>
+      <td>Homeworld</td>
+      <td>Films</td>
+      <td>Species</td>
+      <td>Vehicles</td>
+      <td>StarShips</td>
+    </tr>
+    
 
-<div>
+    <!-- "name": "Luke Skywalker",
+    "height": "172",
+    "mass": "77",
+    "hair_color": "blond",
+    "skin_color": "fair",
+    "eye_color": "blue",
+    "birth_year": "19BBY",
+    "gender": "male",
+    "homeworld": "https://swapi.co/api/planets/1/",
+    "films": [
+        "https://swapi.co/api/films/2/",
+        "https://swapi.co/api/films/6/",
+        "https://swapi.co/api/films/3/",
+        "https://swapi.co/api/films/1/",
+        "https://swapi.co/api/films/7/"
+    ],
+    "species": [
+        "https://swapi.co/api/species/1/"
+    ],
+    "vehicles": [
+        "https://swapi.co/api/vehicles/14/",
+        "https://swapi.co/api/vehicles/30/"
+    ],
+    "starships": [
+        "https://swapi.co/api/starships/12/",
+        "https://swapi.co/api/starships/22/"
+    ] -->
 
-  
-  </div>
 
-  <table>
-    <thead>
-      <tr>
-        <td>Names</td>
-      </tr>
-    </thead>
-    <tbody>
-    <tr>{{people.count}}</tr>
-      <tr *ngFor ="let d of people.results;">
-        <td>{{d.name}}</td>
-      </tr>
-    </tbody>
-  </table>
+
+  </thead>
+  <tbody>
+    <tr *ngFor ="let d of people.results;">
+      <td>{{d.name}}</td>
+      <td>{{d.height}}</td>
+      <td>{{d.mass}}</td>
+      <td>{{d.hair_color}}</td>
+      <td>{{d.skin_color}}</td>
+      <td>{{d.eye_color}}</td>
+      <td>{{d.birth_year}}</td>
+      <td>{{d.gender}}</td>
+      <td>{{d.homeworld}}</td>
+      <td>{{d.films[0]}}</td>
+      <td>{{d.species[0]}}</td>
+      <td>{{d.vehicles[0]}}</td>
+      <td>{{d.starships[0]}}</td>
+    </tr>
+  </tbody>
+</table>
