--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,23 +1,34 @@
 
 
-<nav class="navbar">
-  <!-- logo -->
-  <div class="navbar-brand">
-    <a>
-      <img class="logo" src="assets/img/logo.jpg">
-    </a>
+
+
+
+
+<nav  class="navbar navbar-expand-lg navbar-light bg-light">
+
+  <button  class="navbar-toggler"  type="button"  data-toggle="collapse"  data-target="#navbarSupportedContent"  aria-controls="navbarSupportedContent"  aria-expanded="false"  aria-label="Toggle navigation">
+  <span  class="navbar-toggler-icon"></span>
+  </button>
+<div  class="collapse navbar-collapse"  id="navbarSupportedContent">
+  <div id="main">
+
+    <nav class="navbar">
+      <!-- logo -->
+      <div class="navbar-brand">
+        <a>
+          <img class="logo" src="assets/img/logo.jpg">
+        </a>
+      </div>
+    </nav>
+    <a class="nav-hori left-align" [routerLink]="'/people'"> People </a>
+    <a class="nav-hori" [routerLink]="'/planets'"> Planets </a>
+    <a class="nav-hori" [routerLink]="'/films'"> Films </a>
+    <a class="nav-hori" [routerLink]="'/species'"> Species </a>
+    <a class="nav-hori" [routerLink]="'/vehicles'"> Vehicles </a>
+    <a class="nav-hori" [routerLink]="'/starships'"> StarShips </a>
   </div>
-</nav>
-
-<div>
-
-  <a class="nav-hori left-align" [routerLink]="'/people'"> People </a>
-  <a class="nav-hori" [routerLink]="'/planets'"> Planets </a>
-  <a class="nav-hori" [routerLink]="'/films'"> Films </a>
-  <a class="nav-hori" [routerLink]="'/species'"> Species </a>
-  <a class="nav-hori" [routerLink]="'/vehicles'"> Vehicles </a>
-  <a class="nav-hori" [routerLink]="'/starships'"> StarShips </a>
 </div>
+</nav>
 
 <div>
   <router-outlet></router-outlet>
