--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,18 +1,23 @@
-.logo {
-    size: auto;
-    resize: inherit;
-    width: 601px;
-    height: 283px;
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
-    padding-bottom: 4em;}
 
-.nav-hori{
-    padding: 2em;
-    font-size: 20px;
-}
 
-.left-align{
-padding-left: 14em;
+#main{
+    .logo {
+        size: auto;
+        resize: inherit;
+        width: 601px;
+        height: 283px;
+        margin-left: auto;
+        margin-right: auto;
+        display: block;
+        padding-bottom: 4em;}
+    
+    .nav-hori{
+        padding: 2em;
+        font-size: 20px;
+        color: rgb(111, 222, 226);
+    }
+    
+    .left-align{
+    padding-left:30%;
+    }
 }
