updated after 5 months

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,7 +21,7 @@
       </div>
     </nav>
     <a class="nav-hori left-align" [routerLink]="'/people'"> People </a>
-    <a class="nav-hori" [routerLink]="'/planets'"> Planets </a>
+   <!-- <a class="nav-hori" [routerLink]="'/planets'"> Planets </a>-->
     <a class="nav-hori" [routerLink]="'/films'"> Films </a>
     <a class="nav-hori" [routerLink]="'/species'"> Species </a>
     <a class="nav-hori" [routerLink]="'/vehicles'"> Vehicles </a>
